# simple-expense-fastapi

./: .gitignore  LICENSE  README.md  crud.py  main.py  models.py  pyproject.toml
